--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="author" content="" />
     <title>PHARPRO Consultation Company</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images/Logo.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <style>
         .background-container {
-            background-image: url('./images/WelcomeImage.jpg');
+            background-image: url('/images/WelcomeImage.jpg');
             background-size: cover;
             background-position: center;
             width: 100%;
@@ -51,7 +51,6 @@
             background-color: rgba(0, 0, 0, 0.4); /* Adjust the alpha (0.5) for the desired darkness */
         }
     </style>
-    <link rel="icon" type="image/x-icon" href="./images/Logo.ico">
 </head>
 <body style="background-color: #DFDFDF;">
     <!-- Responsive navbar-->
@@ -101,7 +100,7 @@
     <div class="row mt-4">
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/Warehouse.jpg" alt="Warehouse" class="img-fluid" style="height: 200px;">
+                <img src="/images/Warehouse.jpg" alt="Warehouse" class="img-fluid" style="height: 200px;">
             </div>
             <p class="text-center mt-3"><b>Thermal Mapping Services</b></p>
             <p  style="text-align: justify; margin;auto;">
@@ -118,7 +117,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/CSV.jpg" alt="Cumputerized System Validation" class="img-fluid" style="height: 200px;">
+                <img src="/images/CSV.jpg" alt="Cumputerized System Validation" class="img-fluid" style="height: 200px;">
             </div>
             <p class="text-center mt-3"><b>Computerized System Validation Services</b></p>
                <p  style="text-align: justify; margin;auto;">
@@ -135,7 +134,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/QI.jpg" alt="Quality Improvement" class="img-fluid" style="height: 200px;">
+                <img src="/images/QI.jpg" alt="Quality Improvement" class="img-fluid" style="height: 200px;">
             </div>
             <p class="text-center mt-3"><b> Quality Improvement Services</b></p>
                         <p  style="text-align: justify;">
@@ -152,7 +151,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/QAGAP.jpg" alt="QA & GAP Assessment" class="img-fluid" style="height: 200px;">
+                <img src="/images/QAGAP.jpg" alt="QA & GAP Assessment" class="img-fluid" style="height: 200px;">
             </div>
             <p class="text-center mt-3"><b>Quality Assurance and Gap Assessment Services</b></p>
         <p  style="text-align: justify; margin;auto;">
@@ -195,7 +194,7 @@
         </div>
         <div class="col-md-6">
             <!-- Side image -->
-            <img src="./images/ContactUs.png" alt="Contact Image" class="img-fluid">
+            <img src="/images/ContactUs.png" alt="Contact Image" class="img-fluid">
         </div>
     </div>
 </section>
