--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/csv.jpg alt="Cumputerized System Validation" class="img-fluid" style="height: 200px;">
+                <img src="./images/csv.jpg" alt="Cumputerized System Validation" class="img-fluid" style="height: 200px;">
             </div>
             <p class="text-center mt-3"><b>Computerized System Validation Services</b></p>
                <p  style="text-align: justify; margin;auto;">
