--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         </div>
     </div>  
 </section>
+    <div class="services-dropdown">
+    <button class="dropdown-trigger">Our Services ▼</button>
+    <ul class="services-list">
  <section class="container mt-5" id="services">
     <h2 class="text-center title" style="color: darkorange;">Our Services</h2>
     <div class="row mt-4">
@@ -102,7 +105,8 @@
             <div class="text-center">
                 <img src="./images/warehouse.jpg" alt="Warehouse" class="img-fluid" style="height: 200px;">
             </div>
-            <p class="text-center mt-3"><b>Thermal Mapping Services</b></p>
+        <li>
+            <h3 class="text-center mt-3"><b>Thermal Mapping Services</b></h3>
             <p  style="text-align: justify; margin;auto;">
                 Unlock the Power of Precision Temperature Control with Our Cutting-Edge Thermal Mapping Services!</p>
          <p style="text-align: justify; margin;auto;">
@@ -114,12 +118,14 @@
                 <p  style="text-align: justify; margin;auto;">⏰Prevent Downtime: Say goodbye to unexpected shutdowns. Our proactive maintenance approach keeps your operations running smoothly, minimizing costly downtime and maximizing profits.</p>
                 <p  style="text-align: justify; margin;auto;">💰Cost Savings: Discover areas of energy waste and inefficient insulation, and watch your operational costs plummet. Savings like these go straight to your bottom line!</p>
                 <p style="text-align: justify; margin;auto;">Join the ranks of businesses and organizations that have harnessed the incredible potential of Thermal Mapping Services. Don't miss out on this opportunity to boost efficiency, ensure safety, and save money. Contact us today and let's embark on a journey to thermal excellence together!</p>
+            </li>
         </div>
         <div class="col-md-3">
             <div class="text-center">
                 <img src="./images/csv.jpg" alt="csv" class="img-fluid" style="height: 200px;">
             </div>
-            <p class="text-center mt-3"><b>Computerized System Validation Services</b></p>
+            <li>
+            <h3 class="text-center mt-3"><b>Computerized System Validation Services</b></h3>
                <p  style="text-align: justify; margin;auto;">
                 Elevate Your Operations with Seamless Confidence through Our Computerized System Validation Services!</p>
          <p style="text-align: justify; margin;auto;">
@@ -131,12 +137,14 @@
                 <p  style="text-align: justify; margin;auto;">⏰ Time-Efficient: We know that time is money. Our efficient validation process minimizes disruptions to your workflow, allowing you to focus on what matters most: growing your business.</p>
                 <p  style="text-align: justify; margin;auto;">💡 Continuous Support: Our commitment doesn't end with validation. We offer ongoing support to keep your systems in peak condition, ensuring your operations remain smooth and hassle-free.</p>
                 <p style="text-align: justify; margin;auto;">Experience the confidence that comes with flawless computerized systems. Choose PHARPRO Consultation Company for Computerized System Validation Services and elevate your business to new heights. Contact us today to embark on a journey of reliability, compliance, and unparalleled efficiency!</p>
+            </li>
         </div>
         <div class="col-md-3">
             <div class="text-center">
                 <img src="./images/qi.jpg" alt="Quality Improvement" class="img-fluid" style="height: 200px;">
             </div>
-            <p class="text-center mt-3"><b> Quality Improvement Services</b></p>
+            <li>
+            <h3 class="text-center mt-3"><b> Quality Improvement Services</b></h3>
                         <p  style="text-align: justify;">
                 Elevate Quality with PHARPRO's Cutting-Edge Quality Improvement Services!</p>
          <p style="text-align: justify; margin;auto;">
@@ -148,12 +156,14 @@
                 <p  style="text-align: justify; margin;auto;">📈 Sustainable Growth: Quality is the foundation of growth. By partnering with PHARPRO, you're investing in a future where your business not only meets but exceeds customer expectations, driving long-term success.</p>
                 <p  style="text-align: justify; margin;auto;">🤝 Collaborative Partnership: We're not just service providers; we're your partners in progress. Together, we'll navigate the path to superior quality and ensure your brand stands out in the market.</p>
                 <p style="text-align: justify; margin;auto;">Experience the difference that PHARPRO's Quality Improvement Services can make for your business. Elevate your quality standards, boost customer satisfaction, and secure a competitive edge. Contact us today to embark on a journey of relentless quality enhancement and sustainable growth!</p>
+            </li>
         </div>
         <div class="col-md-3">
             <div class="text-center">
                 <img src="./images/qagap.jpg" alt="QA & GAP Assessment" class="img-fluid" style="height: 200px;">
             </div>
-            <p class="text-center mt-3"><b>Quality Assurance and Gap Assessment Services</b></p>
+            <li>
+            <h3 class="text-center mt-3"><b>Quality Assurance and Gap Assessment Services</b></h3>
         <p  style="text-align: justify; margin;auto;">
                 Elevate Quality and Bridge the Gaps with PHARPRO's Premium Quality Assurance and Gap Assessment Services!</p>
          <p style="text-align: justify; margin;auto;">
@@ -165,8 +175,10 @@
                 <p  style="text-align: justify; margin;auto;">🚀 Operational Efficiency: Quality doesn't have to come at the cost of efficiency. We optimize your processes to ensure quality is seamlessly integrated, ultimately boosting productivity and profitability.</p>
                 <p  style="text-align: justify; margin;auto;">📈 Market Leadership: Quality Assurance isn't just a checkbox; it's your ticket to market leadership. Trust PHARPRO to guide you in creating a brand that consistently outshines the competition.</p>
                 <p style="text-align: justify; margin;auto;">Partner with PHARPRO today and embark on a transformative journey towards excellence. With our Quality Assurance and Gap Assessment Services, you'll bridge gaps, elevate quality, and secure a lasting legacy of unparalleled success. Contact us now to make quality a defining pillar of your business's future!</p>
-        </div>
-
+            </li>
+        </ul>
+</div>
+</section>
          <!-- Contact section -->
 <section class="container mt-5" id="contact">
     <h2 class="text-center title" style="color: darkorange;">Contact Us</h2>
@@ -234,5 +246,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script>
+    // Get the dropdown button and service list
+    const dropdownButton = document.querySelector('.dropdown-trigger');
+    const servicesList = document.querySelector('.services-list');
+
+    // Toggle the service list when the button is clicked
+    dropdownButton.addEventListener('click', () => {
+        servicesList.classList.toggle('show');
+    });
+</script>
 </body>
 </html>
