--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Bootstrap CSS (Add this in the head section) -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Font Awesome CSS (Add this in the head section) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0-beta3/css/all.min.css">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="PHARPRO Consultation Company" />
+    <meta name="author" content="Mohammad Awawdeh" />
     <title>PHARPRO Consultation Company</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="./images/logo.ico" />
@@ -96,8 +102,8 @@
     </div>  
 </section>
     <div class="services-dropdown">
-    <button class="dropdown-trigger">Our Services ▼</button>
-    <ul class="services-list">
+        <button class="dropdown-trigger" id="services-dropdown-button">Our Services ▼</button>
+        <ul class="services-list" style="display: none;">
  <section class="container mt-5" id="services">
     <h2 class="text-center title" style="color: darkorange;">Our Services</h2>
     <div class="row mt-4">
@@ -246,22 +252,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-<script>
-    // Get the dropdown button and service list
-    const dropdownButton = document.querySelector('.dropdown-trigger');
-    const servicesList = document.querySelector('.services-list');
+    <script>
+        // Get the dropdown button and service list
+        const dropdownButton = document.getElementById('services-dropdown-button');
+        const servicesList = document.querySelector('.services-list');
 
-    // Function to toggle the visibility of the service list
-    function toggleServicesList() {
-        if (servicesList.style.display === 'block') {
-            servicesList.style.display = 'none';
-        } else {
-            servicesList.style.display = 'block';
+        // Function to toggle the visibility of the service list
+        function toggleServicesList() {
+            if (servicesList.style.display === 'block') {
+                servicesList.style.display = 'none';
+            } else {
+                servicesList.style.display = 'block';
+            }
         }
-    }
 
-    // Toggle the service list when the button is clicked
-    dropdownButton.addEventListener('click', toggleServicesList);
-</script>
+        // Toggle the service list when the button is clicked
+        dropdownButton.addEventListener('click', toggleServicesList);
+    </script>
 </body>
 </html>
