--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Bootstrap CSS (Add this in the head section) -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Font Awesome CSS (Add this in the head section) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0-beta3/css/all.min.css">
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="PHARPRO Consultation Company" />
@@ -16,6 +10,10 @@
     <link rel="icon" type="image/x-icon" href="./images/logo.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0-beta3/css/all.min.css">
     <style>
         .background-container {
             background-image: url('./images/welcomeimage.jpg');
@@ -102,9 +100,9 @@
     </div>  
 </section>
     <div class="services-dropdown">
-        <button class="dropdown-trigger" id="services-dropdown-button">Our Services ▼</button>
+        <button class="dropdown-trigger" id="services">Our Services ▼</button>
         <ul class="services-list" style="display: none;">
- <section class="container mt-5" id="services">
+ <section class="container mt-5">
     <h2 class="text-center title" style="color: darkorange;">Our Services</h2>
     <div class="row mt-4">
         <div class="col-md-3">
