--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#services">Our Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#services-dropdown-button">Our Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -100,7 +100,7 @@
     </div>  
 </section>
     <div class="services-dropdown">
-        <button class="dropdown-trigger" id="services">Our Services ▼</button>
+        <button class="dropdown-trigger" id="services-dropdown-button">Our Services ▼</button>
         <ul class="services-list" style="display: none;">
  <section class="container mt-5">
     <h2 class="text-center title" style="color: darkorange;">Our Services</h2>
