--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="PHARPRO Consultation Company" />
+    <meta name="description" content="Excel your CSV, QA, Validation and Quality Improvement with PHARPRO" />
     <meta name="author" content="Mohammad Awawdeh" />
-    <title>PHARPRO Consultation Company</title>
+    <title>CSV, QA, Validation, Quality Improvement - Pharmaceutical Service Provider</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="./images/logo.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -60,7 +60,8 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="http://pharpro.co">PHARPRO Consultation Company</a>
+            <a class="navbar-brand" href="http://pharpro.co/">CSV, QA, Validation and Quality Improvement services provided by PHARPRO</b></h1>
+            <h2 sty</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -77,7 +78,7 @@
     <!-- Page content-->
     <div class="background-container">
         <div class="content">
-            <h1 style="color: darkorange; font-size: 72px;"> <b> PHARPRO Consultation Company</b></h1>
+            <h1 style="color: darkorange; font-size: 72px;"> <b> CSV, QA, Validation and Quality Improvement services provided by PHARPRO</b></h1>
             <h2 style="color: darkorange; font-size: 46px;">Welcome to Our Pharmaceuticals Consultation Company</h2>
         </div>
     </div>
@@ -107,7 +108,7 @@
     <div class="row mt-4">
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/warehouse.jpg" alt="Warehouse" class="img-fluid" style="height: 200px;">
+                <img src="./images/warehouse.jpg" alt="Thermal Mapping Services" class="img-fluid" style="height: 200px;">
             </div>
         <li>
             <h3 class="text-center mt-3"><b>Thermal Mapping Services</b></h3>
@@ -126,7 +127,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/csv.jpg" alt="csv" class="img-fluid" style="height: 200px;">
+                <img src="./images/csv.jpg" alt="Computer System Validation" class="img-fluid" style="height: 200px;">
             </div>
             <li>
             <h3 class="text-center mt-3"><b>Computerized System Validation Services</b></h3>
@@ -145,7 +146,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/qi.jpg" alt="Quality Improvement" class="img-fluid" style="height: 200px;">
+                <img src="./images/qi.jpg" alt="Quality Improvement Services" class="img-fluid" style="height: 200px;">
             </div>
             <li>
             <h3 class="text-center mt-3"><b> Quality Improvement Services</b></h3>
@@ -164,7 +165,7 @@
         </div>
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/qagap.jpg" alt="QA & GAP Assessment" class="img-fluid" style="height: 200px;">
+                <img src="./images/qagap.jpg" alt="QA & GAP Assessment Services" class="img-fluid" style="height: 200px;">
             </div>
             <li>
             <h3 class="text-center mt-3"><b>Quality Assurance and Gap Assessment Services</b></h3>
@@ -210,7 +211,7 @@
         </div>
         <div class="col-md-6">
             <!-- Side image -->
-            <img src="./images/contactus.png" alt="Contact Image" class="img-fluid">
+            <img src="./images/contactus.png" alt="PHARPRO Consultation Company" class="img-fluid">
         </div>
     </div>
 </section>
