--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="http://pharpro.co/">CSV, QA, Validation and Quality Improvement services provided by PHARPRO</b></h1>
-            <h2 sty</a>
+         <a class="navbar-brand" href="http://pharpro.co/">CSV, QA, Validation and Quality Improvement services provided by PHARPRO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
