--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
             <div class="col-md-4">
                 <h4>Contact</h4>
-                <p>Email: info@pharpro.co<br>Phone: +962 (798) 565-807</p>
+                <p> info@pharpro.co<br> +971 (585) 998-807 <br> +962 (798) 565-807</p>
             </div>
             <div class="col-md-4">
                 <h4>Hours</h4>
