--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     gtag('js', new Date());
     gtag('config', 'G-XRCV7XCWKT');
     </script>
-    <meta charset="utf-8" />
+        <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="UTF-8" />
     <meta name="description" content="Excel your CSV, QA, Validation and Quality Improvement with PHARPRO" />
     <meta name="author" content="Mohammad Awawdeh" />
     <title>CSV, QA, Validation, Quality Improvement - Pharmaceutical Service Provider</title>
@@ -196,6 +197,7 @@
     <h2 class="text-center title" style="color: darkorange;">Contact Us</h2>
     <div class="row mt-4">
         <div class="col-md-6">
+            <form action="https://your-cloudflare-worker-url" method="post">
             <form action="mailto:info@pharpro.co" method="post" enctype="text/plain">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
