--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#services-dropdown-button">Our Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Free Training</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Snowfall container -->
+    <div id="snowfall-container"></div>
     <!-- Page content-->
     <div class="background-container">
         <div class="content">
@@ -193,7 +195,7 @@
 </section>
          <!-- Contact section -->
 <section class="container mt-5" id="contact">
-    <h2 class="text-center title" style="color: darkorange;">Contact Us</h2>
+    <h2 class="text-center title" style="color: darkorange;">Free Training</h2>
     <div class="row mt-4">
         <div class="col-md-6">
             <form action="mailto:info@pharpro.co" method="post" enctype="text/plain">
