--- a/index.html
+++ b/index.html
@@ -279,5 +279,9 @@
         // Toggle the service list when the button is clicked
         dropdownButton.addEventListener('click', toggleServicesList);
     </script>
+    <div class="snowflake" data-fallspeed="2.0"></div>
+    <div class="snowflake" data-fallspeed="1.5"></div>
+    <div class="snowflake" data-fallspeed="2.5"></div>
+    <div class="snowflake" data-fallspeed="2.0"></div>
 </body>
 </html>
