--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     gtag('js', new Date());
     gtag('config', 'G-XRCV7XCWKT');
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Excel your CSV, QA, Validation and Quality Improvement with PHARPRO" />
@@ -24,7 +25,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0-beta3/css/all.min.css">
     <style>
         .background-container {
-            background-image: url('./images/welcomeimage.jpg');
+            background-image: url('./images/PHARPRO.jpg');
             background-size: cover;
             background-position: center;
             width: 100%;
@@ -42,7 +43,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 100); /* Adjust the alpha (0.5) for the desired darkness */
+            background-color: rgba(0, 0, 0, 0); /* Adjust the alpha (0.5) for the desired darkness */
         }
 
         .content {
@@ -51,22 +52,34 @@
             color: white;
         }
 
-        /* Center align and remove top margin for h1 and h2 */
-        .content h1,
-        .content h2 {
-            text-align: center;
-            margin-top: 0;
-        }
+/* Center align and move text up for h1 and h2 */
+.content h1,
+.content h2 {
+  text-align: center;
+  margin-top: 25px; /* Adjust the value to move the text up or down */
+}
 
-        /* Darken the background color for better readability */
-        .content {
-            background-color: rgba(0, 0, 0, 0.4); /* Adjust the alpha (0.5) for the desired darkness */
-        }
+/* Darken the background color for better readability */
+.content {
+  background-color: rgba(0, 0, 0, 0.3); /* Adjust the alpha (0.3) for the desired darkness */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* Align content at the top */
+  align-items: center; /* Center content horizontally */
+  height: 100vh; /* Assuming you want the container to take the full height of the viewport */
+}
+
+/* Additional styling for better readability */
+.content p {
+  text-align: center; /* Center-align paragraphs if needed */
+  margin: 10px 0; /* Add some margin to paragraphs for better spacing */
+}
     </style>
-    <link rel="stylesheet" href="css/snowfall.css" />
-    <script src="js/snowfall.js"></script>
 </head>
-<body style="background-color: #DFDFDF;">
+<div class="snow_wrap">
+    <div class="snow"></div>
+</div>
+<body style="background-color: #888888;">
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -84,13 +97,10 @@
             </div>
         </div>
     </nav>
-    <!-- Snowfall container -->
-    <div id="snowfall-container"></div>
     <!-- Page content-->
     <div class="background-container">
         <div class="content">
             <h1 style="color: darkorange; font-size: 48px;"> <b> CSV, QA, Validation and Quality Improvement services provided by PHARPRO</b></h1>
-            <h2 style="color: darkorange; font-size: 36px;">Welcome to Our Pharmaceuticals Consultation Company</h2>
         </div>
     </div>
     <section class="container mt-5" id="about">
@@ -262,11 +272,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <script>
+      <script>
         // Get the dropdown button and service list
         const dropdownButton = document.getElementById('services-dropdown-button');
         const servicesList = document.querySelector('.services-list');
-
         // Function to toggle the visibility of the service list
         function toggleServicesList() {
             if (servicesList.style.display === 'block') {
@@ -275,13 +284,9 @@
                 servicesList.style.display = 'block';
             }
         }
-
         // Toggle the service list when the button is clicked
         dropdownButton.addEventListener('click', toggleServicesList);
     </script>
-    <div class="snowflake" data-fallspeed="2.0"></div>
-    <div class="snowflake" data-fallspeed="1.5"></div>
-    <div class="snowflake" data-fallspeed="2.5"></div>
-    <div class="snowflake" data-fallspeed="2.0"></div>
+<script>
 </body>
 </html>
