--- a/index.html
+++ b/index.html
@@ -205,31 +205,37 @@
         </ul>
 </div>
 </section>
-         <!-- Contact section -->
+<!-- Contact section -->
 <section class="container mt-5" id="contact">
     <h2 class="text-center title" style="color: darkorange;">Free Training</h2>
     <div class="row mt-4">
         <div class="col-md-6">
-            <form action="mailto:info@pharpro.co" method="post" enctype="text/plain">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" method="post" target="_blank">
+                <!-- Replace "https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" with the actual Google Forms link -->
+
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
+                    <input type="text" class="form-control" id="name" name="entry.123456789" required>
                 </div>
                 <div class="mb-3">
                     <label for="phone" class="form-label">Phone</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" required>
+                    <input type="tel" class="form-control" id="phone" name="entry.987654321" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+                    <input type="email" class="form-control" id="email" name="entry.555555555" required>
                 </div>
                 <div class="mb-3">
                     <label for="inquiry" class="form-label">Inquiry</label>
-                    <textarea class="form-control" id="inquiry" name="inquiry" rows="4" required></textarea>
+                    <textarea class="form-control" id="inquiry" name="entry.111111111" rows="4" required></textarea>
                 </div>
                 <input type="submit" class="btn btn-primary" value="Submit">
             </form>
         </div>
+    </div>
+</section>
+
+
         <div class="col-md-6">
             <!-- Side image -->
             <img src="./images/contactus.png" alt="PHARPRO Consultation Company" class="img-fluid">
