--- a/index.html
+++ b/index.html
@@ -76,25 +76,21 @@
 }
     </style>
 </head>
-<div class="snow_wrap">
-    <div class="snow"></div>
-</div>
 <body style="background-color: #888888;">
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-         <a class="navbar-brand" href="http://pharpro.co/">CSV, QA, Validation and Quality Improvement services provided by PHARPRO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#services-dropdown-button">Our Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Free Training</a></li>
-                </ul>
-            </div>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="#About Us">Our Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Free Training</a></li>
+    </ul>
+</div>
         </div>
     </nav>
     <!-- Page content-->
@@ -103,48 +99,35 @@
             <h1 style="color: darkred; font-size: 48px;"> <b> CSV, QA, Validation and Quality Improvement services provided by PHARPRO</b></h1>
         </div>
     </div>
-    <section class="container mt-5" id="about">
-    <h2 class="text-center title"; style="color: darkred;">About Us</h2>
-    <div class="row mt-4">
-        <div class="col-md-6">
-            <h3 style="color: darkred;">Our Mission</h3>
-            <p style="text-align: justify; margin;auto;">At PHARPRO Consultation Company, our mission is to be a trusted partner in advancing healthcare through excellence in pharmaceutical consultation.</p>
-            <p>We are committed to providing expert guidance, innovative solutions, and exceptional service to pharmaceutical companies, healthcare organizations, warehouses, environmental monitored storage facilities and storage facilities worldwide.</p>
-            <p style="text-align: justify;"> We are committed to providing expert guidance, innovative solutions, and exceptional service to pharmaceutical companies, healthcare organizations, warehouses, environmental monitored storage facilities and storage facilities worldwide.</p>
-        </div>
-        <div class="col-md-6">
-            <h3 style="color: darkred;">Our Vision</h3>
-          <p style="text-align: justify; margin;auto;">Our vision at PHARPRO Consultation Company is to be the foremost leader in pharmaceutical consultation services, specializing in thermal mapping, quality improvement, validation studies, and computerized system validation.</p>
-          <p style="text-align: justify;"> We envision a future where our pioneering contributions redefine pharmaceutical and healthcare industries' standards for safety, efficiency, and excellence. We are dedicated to guiding pharmaceutical companies in optimizing their processes, ensuring product quality, and achieving compliance with regulatory requirements.</p>
-          <p style="text-align: justify; margin;auto;">By doing so, we aim to facilitate the development of cutting-edge solutions, enhance healthcare delivery, and elevate global healthcare standards. </p>
-          <p style="text-align: justify; margin;auto;">At PHARPRO, our vision is to be the driving force behind innovation and transformation in the pharmaceutical and healthcare sectors. </p>
-        </div>
-    </div>  
-</section>
- <section class="container mt-5">
+    <section class="container mt-5">
        <h2 class="text-center title" style="color: darkred;">Our Services</h2>
     <div class="row mt-4">
         <div class="col-md-12">
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li style="margin-bottom: 30px;">
-                    <div class="text-center">
-                        <img src="./images/warehouse.jpg" alt="Thermal Mapping Services" class="img-fluid" style="height: 200px;">
-                    </div>
-                    <h3 class="text-center mt-3" style="color: darkred;"><b>Thermal Mapping Services</b></h3>
-                    <p style="text-align: justify; margin:auto;">
-                        Unlock the Power of Precision Temperature Control with Our Cutting-Edge Thermal Mapping Services!
-                    </p>
-                    <p style="text-align: justify; margin:auto;">
-                        Are you ready to take your operations to the next level? Look no further than our state-of-the-art Thermal Mapping Services, designed to revolutionize the way you manage temperature across your facilities and assets.
-                    </p>
-                    <p style="text-align: justify; margin;auto;">🌡️Precision Insights: Our advanced thermal mapping service provides you with a regulatory compliance report that comply with DHA & GCC requirements. Say goodbye to guesswork and hello to 21 CFR compliance reporting!</p>
-                    <p style="text-align: justify; margin;auto;">🚀Enhanced Efficiency: With Thermal Mapping, you'll effortlessly optimize your processes. Identify hotspots and cold spots, reduce energy consumption, and supercharge your productivity.</p>
-                    <p  style="text-align: justify; margin;auto;">🛡️Safety First: Safety is non-negotiable, and our services are your shield. Detect potential thermal anomalies before they become disasters, ensuring the well-being of your equipment and products.</p>
-                    <p style="text-align: justify; margin;auto;">📜Regulatory Compliance: Don't sweat over compliance. We've got you covered! Ensure you meet DHA&GCC standards and regulations without breaking a sweat.</p>
-                    <p  style="text-align: justify; margin;auto;">⏰Prevent Downtime: Say goodbye to unexpected shutdowns. Our proactive maintenance approach keeps your operations running smoothly, minimizing costly downtime and maximizing profits.</p>
-                    <p  style="text-align: justify; margin;auto;">💰Cost Savings: Discover areas of energy waste and inefficient insulation, and watch your operational costs plummet. Savings like these go straight to your bottom line!</p>
-                    <p style="text-align: justify; margin;auto;">Join the ranks of businesses and organizations that have harnessed the incredible potential of Thermal Mapping Services. Don't miss out on this opportunity to boost efficiency, ensure safety, and save money. Contact us today and let's embark on a journey to thermal excellence together!</p>
-                    </li>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="text-center">
+                <img src="./images/warehouse.jpg" alt="Thermal Mapping Services" class="img-fluid" style="height: 200px;">
+            </div>
+        </div>
+        <div class="col-md-9">
+            <h3 style="color: darkred;"><b>Thermal Mapping Services</b></h3>
+            <p style="text-align: justify; margin:auto;">
+                Unlock the Power of Precision Temperature Control with Our Cutting-Edge Thermal Mapping Services!
+            </p>
+            <p style="text-align: justify; margin:auto;">
+                Are you ready to take your operations to the next level? Look no further than our state-of-the-art Thermal Mapping Services, designed to revolutionize the way you manage temperature across your facilities and assets.
+            </p>
+            <p style="text-align: justify; margin;auto;">🌡️Precision Insights: Our advanced thermal mapping service provides you with a regulatory compliance report that comply with DHA & GCC requirements. Say goodbye to guesswork and hello to 21 CFR compliance reporting!</p>
+            <p style="text-align: justify; margin;auto;">🚀Enhanced Efficiency: With Thermal Mapping, you'll effortlessly optimize your processes. Identify hotspots and cold spots, reduce energy consumption, and supercharge your productivity.</p>
+            <p  style="text-align: justify; margin;auto;">🛡️Safety First: Safety is non-negotiable, and our services are your shield. Detect potential thermal anomalies before they become disasters, ensuring the well-being of your equipment and products.</p>
+            <p style="text-align: justify; margin;auto;">📜Regulatory Compliance: Don't sweat over compliance. We've got you covered! Ensure you meet DHA&GCC standards and regulations without breaking a sweat.</p>
+            <p  style="text-align: justify; margin;auto;">⏰Prevent Downtime: Say goodbye to unexpected shutdowns. Our proactive maintenance approach keeps your operations running smoothly, minimizing costly downtime and maximizing profits.</p>
+            <p  style="text-align: justify; margin;auto;">💰Cost Savings: Discover areas of energy waste and inefficient insulation, and watch your operational costs plummet. Savings like these go straight to your bottom line!</p>
+            <p style="text-align: justify; margin;auto;">Join the ranks of businesses and organizations that have harnessed the incredible potential of Thermal Mapping Services. Don't miss out on this opportunity to boost efficiency, ensure safety, and save money. Contact us today and let's embark on a journey to thermal excellence together!</p>
+        </div>
+    </div>
+</div>
+
                 <li style="margin-bottom: 30px;">
                     <div class="text-center">
                         <img src="./images/csv.jpg" alt="Computer System Validation" class="img-fluid" style="height: 200px;">
@@ -203,6 +186,24 @@
                 </li>
         </ul>
 </div>
+</section>
+<section class="container mt-5" id="about">
+    <h2 class="text-center title"; style="color: darkred;">About Us</h2>
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <h3 style="color: darkred;">Our Mission</h3>
+            <p style="text-align: justify; margin;auto;">At PHARPRO Consultation Company, our mission is to be a trusted partner in advancing healthcare through excellence in pharmaceutical consultation.</p>
+            <p>We are committed to providing expert guidance, innovative solutions, and exceptional service to pharmaceutical companies, healthcare organizations, warehouses, environmental monitored storage facilities and storage facilities worldwide.</p>
+            <p style="text-align: justify;"> We are committed to providing expert guidance, innovative solutions, and exceptional service to pharmaceutical companies, healthcare organizations, warehouses, environmental monitored storage facilities and storage facilities worldwide.</p>
+        </div>
+        <div class="col-md-6">
+            <h3 style="color: darkred;">Our Vision</h3>
+          <p style="text-align: justify; margin;auto;">Our vision at PHARPRO Consultation Company is to be the foremost leader in pharmaceutical consultation services, specializing in thermal mapping, quality improvement, validation studies, and computerized system validation.</p>
+          <p style="text-align: justify;"> We envision a future where our pioneering contributions redefine pharmaceutical and healthcare industries' standards for safety, efficiency, and excellence. We are dedicated to guiding pharmaceutical companies in optimizing their processes, ensuring product quality, and achieving compliance with regulatory requirements.</p>
+          <p style="text-align: justify; margin;auto;">By doing so, we aim to facilitate the development of cutting-edge solutions, enhance healthcare delivery, and elevate global healthcare standards. </p>
+          <p style="text-align: justify; margin;auto;">At PHARPRO, our vision is to be the driving force behind innovation and transformation in the pharmaceutical and healthcare sectors. </p>
+        </div>
+    </div>  
 </section>
 <!-- Contact section -->
 <section class="container mt-5" id="contact">
