--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About Us:</a></li>
-        <li class="nav-item"><a class="nav-link" href="#services">Our Services:</a></li>
+        <li class="nav-item"><a class="nav-link" href="#About Us">Our Services:</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Free Training:</a></li>
     </ul>
 </div>
@@ -106,7 +106,7 @@
    <div class="row">
     <div class="col-md-3">
         <div class="text-center">
-            <img src="./images/warehouse.jpg" alt="Thermal Mapping Services" class="img-fluid" style="height: 400px;">
+            <img src="./images/warehouse.jpg" alt="Thermal Mapping Services" class="img-fluid" style="height: 300px;">
         </div>
     </div>
     <div class="col-md-9">
@@ -131,7 +131,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/csv.jpg" alt="Computer System Validation" class="img-fluid" style="height: 400px;">
+                <img src="./images/csv.jpg" alt="Computer System Validation" class="img-fluid" style="height: 300px;">
             </div>
         </div>
         <div class="col-md-9">
@@ -157,7 +157,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="text-center">
-                <img src="./images/qagap.jpg" alt="QA & GAP Assessment Services" class="img-fluid" style="height: 400px;">
+                <img src="./images/qagap.jpg" alt="QA & GAP Assessment Services" class="img-fluid" style="height: 300px;">
             </div>
         </div>
         <div class="col-md-9">
