--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
 </head>
 <body style="background-color: #888888;">
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">About Us:</a></li>
-        <li class="nav-item"><a class="nav-link" href="#About Us">Our Services:</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Free Training:</a></li>
-    </ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#About Us:">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Our Serivces:">Our Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Free Training</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
     <!-- Page content-->
     <div class="background-container">
         <div class="content">
             <h1 style="color: darkred; font-size: 48px;"> <b> CSV, QA, Validation and Quality Improvement services provided by PHARPRO</b></h1>
         </div>
     </div>
-    <section class="container mt-5">
+    <section class="container mt-5" id="Our Serivces:">
     <h2 class="title" style="color: darkred;">Our Services:</h2>
     <div class="row mt-4">
         <div class="col-md-12">
@@ -205,7 +205,7 @@
         }
     </style>
 
-<section class="container mt-5" id="about">
+<section class="container mt-5" id="About Us:">
     <h2 class="title" style="color: darkred;">About Us:</h2>
     <div class="row mt-4">
         <div class="col-md-12">
