--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
   text-align: center; /* Center-align paragraphs if needed */
   margin: 10px 0; /* Add some margin to paragraphs for better spacing */
 }
+
+    </style>
+        <style>
+        /* Remove bullets from dropdown list */
+        .services-list {
+            list-style-type: none;
+            padding-left: 0; /* Optional: Remove left padding */
+        }
     </style>
 </head>
 <body style="background-color: #888888;">
@@ -127,7 +135,6 @@
     </div>
 </div>
 
-<li style="margin-bottom: 30px;">
     <div class="row">
         <div class="col-md-3">
             <div class="text-center">
@@ -151,9 +158,8 @@
             <p style="text-align: justify; margin;auto;">Experience the confidence that comes with flawless computerized systems. Choose PHARPRO Consultation Company for Computerized System Validation Services and elevate your business to new heights. Contact us today to embark on a journey of reliability, compliance, and unparalleled efficiency!</p>
         </div>
     </div>
-</li>
 
-<li style="margin-bottom: 30px;">
+
     <div class="row">
         <div class="col-md-3">
             <div class="text-center">
@@ -180,7 +186,6 @@
             <p style="text-align: justify; margin;auto;">Partner with PHARPRO today and embark on a transformative journey towards excellence. With our Quality Assurance and Gap Assessment Services, you'll bridge gaps, elevate quality, and secure a lasting legacy of unparalleled success. Contact us now to make quality a defining pillar of your business's future!</p>
         </div>
     </div>
-</li>
 
 </section>
 <style>
