--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <p style="text-align: justify; margin:auto;">
             Are you ready to take your operations to the next level? Look no further than our state-of-the-art Thermal Mapping Services, designed to revolutionize the way you manage temperature across your facilities and assets.
         </p>
+        <p style="text-align: justify; margin;auto;"></p>
         <p style="text-align: justify; margin;auto;">🌡️Precision Insights: Our advanced thermal mapping service provides you with a regulatory compliance report that comply with DHA & GCC requirements. Say goodbye to guesswork and hello to 21 CFR compliance reporting!</p>
         <p style="text-align: justify; margin;auto;">🚀Enhanced Efficiency: With Thermal Mapping, you'll effortlessly optimize your processes. Identify hotspots and cold spots, reduce energy consumption, and supercharge your productivity.</p>
         <p  style="text-align: justify; margin;auto;">🛡️Safety First: Safety is non-negotiable, and our services are your shield. Detect potential thermal anomalies before they become disasters, ensuring the well-being of your equipment and products.</p>
