--- a/index.html
+++ b/index.html
@@ -122,9 +122,6 @@
         <p style="text-align: justify; margin:auto;">
             Unlock the Power of Precision Temperature Control with Our Cutting-Edge Thermal Mapping Services!
         </p>
-        <p style="text-align: justify; margin:auto;">
-            Are you ready to take your operations to the next level? Look no further than our state-of-the-art Thermal Mapping Services, designed to revolutionize the way you manage temperature across your facilities and assets.
-        </p>
         <p style="text-align: justify; margin;auto;"></p>
         <p style="text-align: justify; margin;auto;">🌡️Precision Insights: Our advanced thermal mapping service provides you with a regulatory compliance report that comply with DHA & GCC requirements. Say goodbye to guesswork and hello to 21 CFR compliance reporting!</p>
         <p style="text-align: justify; margin;auto;">🚀Enhanced Efficiency: With Thermal Mapping, you'll effortlessly optimize your processes. Identify hotspots and cold spots, reduce energy consumption, and supercharge your productivity.</p>
@@ -147,9 +144,7 @@
             <p style="text-align: justify; margin:auto;">
                 Elevate Your Operations with Seamless Confidence through Our Computerized System Validation Services!
             </p>
-            <p style="text-align: justify; margin;auto;">
-                At PHARPRO Consultation Company, we understand that in today's fast-paced and highly regulated business environment, having dependable computerized systems is paramount. That's why we offer top-tier Computerized System Validation Services that ensure your systems run flawlessly, meeting all compliance requirements, and giving you peace of mind.
-            </p>
+            <p style="text-align: justify; margin;auto;"></p>
             <p style="text-align: justify; margin;auto;">🔐 Bulletproof Compliance: Our expert team meticulously validates your computerized systems to meet and exceed industry regulations and standards. Say goodbye to compliance headaches!</p>
             <p style="text-align: justify; margin;auto;">🚀 Optimized Performance: Unlock the full potential of your systems. Our validation services not only ensure compliance but also fine-tune your systems for maximum efficiency, saving you time and resources.</p>
             <p  style="text-align: justify; margin;auto;">🔍 Thorough Testing: We leave no stone unturned. Our comprehensive testing protocols ensure that every aspect of your computerized systems is rigorously evaluated, leaving no room for surprises.</p>
@@ -159,8 +154,6 @@
             <p style="text-align: justify; margin;auto;">Experience the confidence that comes with flawless computerized systems. Choose PHARPRO Consultation Company for Computerized System Validation Services and elevate your business to new heights. Contact us today to embark on a journey of reliability, compliance, and unparalleled efficiency!</p>
         </div>
     </div>
-
-
     <div class="row">
         <div class="col-md-3">
             <div class="text-center">
@@ -175,9 +168,7 @@
             <p  style="text-align: justify; margin;auto;">
                 Elevate Quality and Bridge the Gaps with PHARPRO's Premium Quality Assurance and Gap Assessment Services!
             </p>
-            <p style="text-align: justify; margin;auto;">
-                At PHARPRO, we're your dedicated partners in perfection, committed to enhancing your quality standards and ensuring you stay ahead of the competition. Our Quality Assurance and Gap Assessment Services are your roadmap to excellence.
-            </p>
+            <p style="text-align: justify; margin;auto;"></p>
             <p style="text-align: justify; margin;auto;">🌟 Quality Reinvented: PHARPRO's expert team is your quality compass. We redefine excellence, helping you meet and exceed industry benchmarks while consistently delivering top-notch products and services.</p>
             <p style="text-align: justify; margin;auto;">📊 Gap Assessment Excellence: Our comprehensive Gap Assessment identifies areas in need of improvement, ensuring no detail is overlooked. We provide a crystal-clear roadmap for bridging those gaps, ensuring a seamless journey to superior quality.</p>
             <p  style="text-align: justify; margin;auto;">🔍 Data-Driven Precision: Leave nothing to chance. We harness the power of data analytics to provide you with insights that drive decision-making, empower your teams, and enhance your processes.</p>
