--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
     </style>
 </head>
-<body style="background-color: #888888;">
+<body style="background-color: #C0C0C0;">
     <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
