--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 </section>
 <!-- Contact section -->
 <section class="container mt-5" id="contact">
-    <h2 class="title" style="color: darkred;">Free Training:</h2>
+    <h2 class="title" style="color: darkred;">Contact Us:</h2>
     <div class="row mt-4">
         <div class="col-md-6">
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" method="post" target="_blank">
