--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Our Serivces:">Our Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#About Us:">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Free Training</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
             </ul>
         </div>
     </div>
