--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 /* Darken the background color for better readability */
 .content {
-  background-color: rgba(0, 0, 0, 0.3); /* Adjust the alpha (0.3) for the desired darkness */
+  background-color: rgba(0, 0, 0, 0); /* Adjust the alpha (0.3) for the desired darkness */
   display: flex;
   flex-direction: column;
   justify-content: flex-start; /* Align content at the top */
@@ -268,11 +268,15 @@
             </div>
             <div class="col-md-4">
                 <h4>Contact</h4>
-                <p> info@pharpro.co<br> +971 (585) 998-807 <br> +962 (798) 565-807</p>
+                <p> info@pharpro.co<br> mohammad.awawdeh@pharpro.co <br> +971 (585) 998-807 <br> +962 (798) 565-807</p>
             </div>
-            <div class="col-md-4">
-                <h4>Hours</h4>
-                <p>Monday - Friday: 8:30 AM - 5:00 PM
+        <div class="col-md-4">
+                <h4>LinkedIn</h4>
+                <p>
+                    <a href="https://www.linkedin.com/company/pharprocc" target="_blank">
+                        Visit our LinkedIn page
+                    </a>
+                </p>
             </div>
         </div>
         <hr>
@@ -287,7 +291,6 @@
         </div>
     </div>
 </footer>
-
     </div>
 </section>
     </div>
