--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#OurSerivces:">Our Services</a></li>
+                <<li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
                 <li class="nav-item"><a class="nav-link" href="#AboutUs:">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
             </ul>
@@ -400,8 +401,66 @@
             text-align: left;
         }
     </style>
+<section class="container mt-5" id="testimonials">
+    <h2 class="title" style="color: darkred;">Testimonials:</h2>
+    <div id="testimonialsCarousel" class="carousel slide mt-4" data-ride="carousel" data-interval="4000">
+        <div class="carousel-inner">
+            <!-- Slide 1: Axantia Group -->
+            <div class="carousel-item active">
+                <div class="row mb-4">
+                    <div class="col-md-3 text-center">
+                        <img src="./images/pharma_international_logo.jpeg" alt="Axantia Group" class="img-fluid" style="height: 150px;">
+                    </div>
+                    <div class="col-md-9">
+                        <p class="testimonial-text">
+                            "PHARPRO's CSV services helped us optimize our systems with seamless efficiency and ensured our compliance with international standards. We are thrilled with the results!"
+                        </p>
+                        <p><strong>- Axantia Group</strong></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Slide 2: Dar Al Dawa -->
+            <div class="carousel-item">
+                <div class="row mb-4">
+                    <div class="col-md-3 text-center">
+                        <img src="./images/DAD.png" alt="Dar Al Dawa" class="img-fluid" style="height: 150px;">
+                    </div>
+                    <div class="col-md-9">
+                        <p class="testimonial-text">
+                            "Thanks to PHARPRO, we were able to successfully validate our pharmaceutical systems, ensuring quality and efficiency at every step."
+                        </p>
+                        <p><strong>- Dar Al Dawa</strong></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Slide 3: Al Hayat Pharmaceuticals -->
+            <div class="carousel-item">
+                <div class="row mb-4">
+                    <div class="col-md-3 text-center">
+                        <img src="./images/Hayat.png" alt="Al Hayat Pharmaceuticals" class="img-fluid" style="height: 150px;">
+                    </div>
+                    <div class="col-md-9">
+                        <p class="testimonial-text">
+                            "PHARPRO's expert consultation has been a game-changer for us. Their CSV services ensured we stayed ahead of regulatory requirements while improving overall performance."
+                        </p>
+                        <p><strong>- Al Hayat Pharmaceuticals</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Controls -->
+        <a class="carousel-control-prev" href="#testimonialsCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#testimonialsCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
 
-<<section class="container mt-5" id="about-us">
+<<section class="container mt-5" id="AboutUs:">
     <h1 class="title text-center" style="color: darkred;">About Us</h1>
     <div class="row mt-4">
         <!-- Our Mission and Our Vision beside each other -->
@@ -431,8 +490,6 @@
         </div>
     </div>
 </section>
-
-
 </section>
 <!-- Contact section -->
 <section class="container mt-5" id="contact">
