--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#OurSerivces:">Our Services</a></li>
                 <<li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
+                <li class="nav-item"><a class="nav-link" href="#partners">Our Partners</a></li>
+                <li class="nav-item"><a class="nav-link" href="#software-solutions">Software Solutions</a></li>
+                <li class="nav-item"><a class="nav-link" href="#our-team">Our Team</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ceo-letter">CEO Letter</a></li>
                 <li class="nav-item"><a class="nav-link" href="#AboutUs:">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
             </ul>
@@ -459,8 +463,154 @@
         </a>
     </div>
 </section>
+<section class="container mt-5" id="partners">
+    <h2 class="title" style="color: darkred;">Our Partners:</h2>
+    <div class="scrolling-wrapper-partners">
+        <!-- Partner 1: Arizona -->
+        <div class="partner-item text-center">
+            <img src="./images/arizona_logo.jpg" alt="Arizona">
+            <p>Arizona Automation</p>
+        </div>
+        <!-- Partner 2: COGTIVE -->
+        <div class="partner-item text-center">
+            <img src="./images/cogtive_logo.png" alt="COGTIVE">
+            <p>COGTIVE</p>
+        </div>
+        <!-- Partner 3: AAPC -->
+        <div class="partner-item text-center">
+            <img src="./images/aapc_logo.jpeg" alt="AAPC">
+            <p>Adwwaa Alwatania</p>
+        </div>
+        <!-- Partner 4: Euphry -->
+        <div class="partner-item text-center">
+            <img src="./images/eupry_logo.jpg" alt="Eupry">
+            <p>Eupry</p>
+        </div>
+        <!-- Repeat partners to create continuous scrolling -->
+        <div class="partner-item text-center">
+            <img src="./images/arizona_logo.jpg" alt="Arizona">
+            <p>Arizona Automation</p>
+        </div>
+        <div class="partner-item text-center">
+            <img src="./images/cogtive_logo.png" alt="COGTIVE">
+            <p>COGTIVE</p>
+        </div>
+        <div class="partner-item text-center">
+            <img src="./images/aapc_logo.jpeg" alt="AAPC">
+            <p>Adwwaa Alwatania</p>
+        </div>
+        <div class="partner-item text-center">
+            <img src="./images/eupry_logo.jpg" alt="Eupry">
+            <p>Eupry</p>
+        </div>
+    </div>
+</section>
+<section class="container mt-5" id="software-solutions">
+    <h2 class="title" style="color: darkred;">Our Software Solutions:</h2>
+    <div class="scrolling-wrapper-solutions">
+        <!-- First Row -->
+        <div class="scroll-row">
+            <!-- Solution 1: LIMS -->
+            <div class="solution-item text-center">
+                <img src="./images/lims_logo.png" alt="LIMS" class="img-fluid">
+                <p>Laboratory Information Management System (LIMS)</p>
+            </div>
+            <!-- Solution 2: QMS -->
+            <div class="solution-item text-center">
+                <img src="./images/qms_logo.png" alt="QMS" class="img-fluid">
+                <p>Quality Management System (QMS)</p>
+            </div>
+            <!-- Solution 3: DMS -->
+            <div class="solution-item text-center">
+                <img src="./images/dms_logo.jpeg" alt="DMS" class="img-fluid">
+                <p>Documents Management System (DMS)</p>
+            </div>
+            <!-- Solution 4: User Management Records -->
+            <div class="solution-item text-center">
+                <img src="./images/user_management_logo.png" alt="User Management Records" class="img-fluid">
+                <p>User Management Records</p>
+            </div>
+            <!-- Solution 5: Spreadsheet Management -->
+            <div class="solution-item text-center">
+                <img src="./images/spreadsheet_logo.png" alt="Spreadsheet Management" class="img-fluid">
+                <p>Spreadsheet/Excel Sheet Management</p>
+            </div>
+            <!-- Solution 6: Calibration/Preventive Maintenance -->
+            <div class="solution-item text-center">
+                <img src="./images/calibration_logo.png" alt="Calibration Management" class="img-fluid">
+                <p>Calibration/Preventive Maintenance Management</p>
+            </div>
+        </div>
+        <!-- Second Row (duplicate items for continuous scrolling) -->
+        <div class="scroll-row">
+            <!-- Solution 7: Stability Samples Management -->
+            <div class="solution-item text-center">
+                <img src="./images/stability_logo.png" alt="Stability Samples Management" class="img-fluid">
+                <p>Stability Samples Management</p>
+            </div>
+            <!-- Solution 8: Confidential Documents Sharing -->
+            <div class="solution-item text-center">
+                <img src="./images/confidential_sharing_logo.png" alt="Confidential Documents Sharing" class="img-fluid">
+                <p>Confidential Documents Sharing</p>
+            </div>
+            <!-- Solution 9: LMS -->
+            <div class="solution-item text-center">
+                <img src="./images/lms_logo.png" alt="LMS" class="img-fluid">
+                <p>Learning/Training Management System (LMS)</p>
+            </div>
+            <!-- Solution 10: EBR -->
+            <div class="solution-item text-center">
+                <img src="./images/ebr_logo.png" alt="EBR" class="img-fluid">
+                <p>Electronic Batch Records (EBR)</p>
+            </div>
+            <!-- Solution 11: AI Operation Excellence -->
+            <div class="solution-item text-center">
+                <img src="./images/ai_logo.png" alt="AI Operation Excellence" class="img-fluid">
+                <p>Artificial Intelligence (AI) Operation Excellence</p>
+            </div>
+            <!-- Solution 12: EMS -->
+            <div class="solution-item text-center">
+                <img src="./images/eupry.png" alt="EMS" class="img-fluid">
+                <p>Environmental Monitoring System</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="container mt-5" id="our-team">
+    <h2 class="title" style="color: darkred;">Our Team</h2>
+    <p>Our team is composed of dedicated professionals with diverse expertise in software development, quality assurance, and customer support. We are committed to delivering innovative solutions and exceptional service to meet your needs. Each member brings unique skills and experiences, working collaboratively to achieve excellence and drive success in our projects.</p>
+</section>
+<section class="container mt-5" id="ceo-letter">
+    <h2 class="title" style="color: darkred;">A Message from Our CEO</h2>
+    <div class="ceo-section d-flex align-items-center">
+        <div class="ceo-photo">
+            <img src="./images/ceo_photo.jpeg" alt="Mohammad Awawdeh" class="img-fluid rounded-circle">
+        </div>
+        <div class="ceo-message ml-4">
+            <h3>Dear Valued Partners and Clients,</h3>
+            <p>
+                I am thrilled to welcome you to PHARPRO Consultation, where we are dedicated to pioneering excellence and innovation in our field. At PHARPRO, our mission is to empower businesses with cutting-edge solutions and unparalleled support, ensuring you achieve your goals with confidence and success.
+            </p>
+            <p>
+                Our team is driven by a passion for excellence and a commitment to providing tailored solutions that meet your unique needs. We are proud of our comprehensive suite of services, which includes advanced software solutions designed to streamline your operations and enhance efficiency.
+            </p>
+            <p>
+                As we continue to grow and evolve, our focus remains on delivering the highest standards of service and fostering strong, long-lasting relationships with our partners and clients. Your success is our success, and we are here to support you every step of the way.
+            </p>
+            <p>
+                Thank you for your trust and partnership. Together, we will navigate the future with innovation and excellence.
+            </p>
+            <p>
+                Warm regards,<br>
+                <strong>Mohammad Awawdeh</strong><br>
+                CEO, PHARPRO Consultation<br>
+                <a href="http://www.pharpro.co">www.pharpro.co</a>
+            </p>
+        </div>
+    </div>
+</section>
 
-<<section class="container mt-5" id="AboutUs:">
+<section class="container mt-5" id="AboutUs:">
     <h1 class="title text-center" style="color: darkred;">About Us</h1>
     <div class="row mt-4">
         <!-- Our Mission and Our Vision beside each other -->
@@ -498,7 +648,6 @@
         <div class="col-md-6">
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" method="post" target="_blank">
                 <!-- Replace "https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" with the actual Google Forms link -->
-
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name" name="entry.123456789" required>
