--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             </div>
             <!-- Solution 12: EMS -->
             <div class="solution-item text-center">
-                <img src="./images/eupry.png" alt="EMS" class="img-fluid">
+                <img src="./images/Eupry.png" alt="EMS" class="img-fluid">
                 <p>Environmental Monitoring System</p>
             </div>
         </div>
